# cardputer-adv-tests

./: .gitignore  GITHUB_SETUP.md  README.md  sdkconfig
components/m5stack_tab5/: CMakeLists.txt
docs/: M5UNIT_SCROLL_USER_GUIDE.md
main/: CMakeLists.txt
tests/: CMakeLists.txt
tests/components/m5stack_tab5/: m5stack_tab5.c
tests/docs/: CARDKEYBOARD_KEYCODES.md  EXTERNAL_DISPLAY_ILI9488_GUIDE.md  M5UNIT_SCROLL_GUIDE.md
tests/i2c-keyboard/: README.md  python_terminal_external_display_i2c_keyboard.ino
tests/m5unit-scroll/: README.md  unitscroll_test_external_display.ino
tests/nes_cardputer_adv_240/: README.md  platformio.ini
tests/nes_cardputer_adv_240/src/: main.cpp  nes_osd.cpp  pins.h
tests/nes_cardputer_adv_240/src/external_display/: LGFX_ILI9341.cpp  LGFX_ILI9341.h
tests/pahub_test_external_display/: PA_HUB_DOCUMENTATION.md  README.md
tests/pahub_test_external_display/src/: main.cpp
tests/pahub_test_v1.1/: README.md  platformio.ini
tests/pahub_test_v1.1/src/: main.cpp
tests/tab5_battery_charger_test/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
tests/tab5_battery_charger_test/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
tests/uart_bridge_crowpanel/: README.md  uart_bridge_crowpanel.ino
tests/usb_gamepad_display_test/: README.md  sdkconfig.defaults
tests/usb_gamepad_display_test/main/: app_main.cpp
tests/usb_qwerty_test/: CMakeLists.txt  README.md  USB_KEYBOARD_GUIDE.md  sdkconfig.defaults
tests/usb_qwerty_test/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
(+6 files in other folders)
